--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,9 +38,10 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/responsable/, role: ROLE_AGENCE }
-        - { path: ^/preresponsable/, role: ROLE_PREAGENCE }
         - { path: ^/client/, role: ROLE_CLIENT }
+        - { path: ^/preclient/, role: ROLE_PRECLIENT }
         - { path: ^/moniteur/, role: ROLE_MONITEUR }
+        - { path: ^/premoniteur/, role: ROLE_PREMONITEUR }
         - { path: ^/superadmin/, role: ROLE_SUPER_ADMIN }
 
 
