--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "knplabs/knp-snappy-bundle": "~1.4",
-        "nomaya/social-bundle": "dev-master"
+        "nomaya/social-bundle": "dev-master",
+        "blackknight467/star-rating-bundle": "^2.0",
+        "fortawesome/font-awesome": "^4.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
